--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body class="bg-[hsl(257,40%,49%)] bg-[url('/images/bg-mobile.svg')] sm:bg-[url('/images/bg-desktop.svg')] bg-cover bg-no-repeat ">
+<body class="bg-[hsl(257,40%,49%)] bg-[url('./images/bg-mobile.svg')] sm:bg-[url('./images/bg-desktop.svg')] bg-cover bg-no-repeat ">
   <header>
     <div class="lg:p-20 sm: p-2">
       <img src="./images/logo.svg" alt="">
